<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <View
        android:layout_width="35dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="Selected user"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:padding="10dp"
        android:text="Full name:" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:padding="10dp"
        android:text="Email:" />

    <TextView
        android:id="@+id/contactTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:padding="10dp"
        android:text="Contact:" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:layout_marginTop="11dp"
        android:focusable="false"
        android:hint="@string/select_date" />

    <EditText
        android:id="@+id/shiftStartTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:focusable="false"
        android:hint="@string/select_shift_start_time" />

    <TimePicker
        android:id="@+id/shiftStartTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/shiftEndTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:focusable="false"
        android:hint="@string/select_shift_end_time" />

    <TimePicker
        android:id="@+id/shiftEndTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:focusable="false"
        android:hint="@string/select_location" />

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/leaderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/leader" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/assignButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonmain"
            android:fontFamily="@font/poppinsmedium"
            android:text="Assign duty"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

    </LinearLayout>

</LinearLayout>
